Fully implemented purchasing of cards and viewing of cards via brute-forcing the memento.